--- a/gdl2/Apgar.v1.test.yml
+++ b/gdl2/Apgar.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: Apgar.v1
 test_cases:
-- id: case_ApgarScore=0
+- id: score 0
   input:
     1:
       gt0003|Respiratory effort: 0|local::at0010|Absent|
@@ -12,10 +12,32 @@ test_cases:
   expected_output:
     1:
       gt0026|Total score: 0
-      gt0028|Apgar assessment: 2|local::at0005|Critically low, intervention required|
-
-
-- id: case_ApgarScore=5
+      gt0028|Apgar assessment: Critically low, intervention required
+- id: score 3
+  input:
+    1:
+      gt0003|Respiratory effort: 1|local::at0011|Weak or irregular|
+      gt0004|Heart Rate: 1|local::at0007|<100 beats per minute|
+      gt0005|Muscle tone: 1|local::at0015|Reduced tone|
+      gt0006|Reflex irritability: 0|local::at0018|No response|
+      gt0007|Skin colour: 0|local::at0022|Completely blue|
+  expected_output:
+    1:
+      gt0026|Total score: 3
+      gt0028|Apgar assessment: Critically low, intervention required
+- id: score 4
+  input:
+    1:
+      gt0003|Respiratory effort: 1|local::at0011|Weak or irregular|
+      gt0004|Heart Rate: 1|local::at0007|<100 beats per minute|
+      gt0005|Muscle tone: 1|local::at0015|Reduced tone|
+      gt0006|Reflex irritability: 1|local::at0019|Reduced response|
+      gt0007|Skin colour: 0|local::at0022|Completely blue|
+  expected_output:
+    1:
+      gt0026|Total score: 4
+      gt0028|Apgar assessment: Moderately abnormal
+- id: score 5
   input:
     1:
       gt0003|Respiratory effort: 1|local::at0011|Weak or irregular|
@@ -26,10 +48,56 @@ test_cases:
   expected_output:
     1:
       gt0026|Total score: 5
-      gt0028|Apgar assessment: 1|local::at0004|Moderately abnormal|
-
-
-- id: case_ApgarScore=10
+      gt0028|Apgar assessment: Moderately abnormal
+- id: score 6
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 1|local::at0007|<100 beats per minute|
+      gt0005|Muscle tone: 1|local::at0015|Reduced tone|
+      gt0006|Reflex irritability: 1|local::at0019|Reduced response|
+      gt0007|Skin colour: 1|local::at0023|Body pink; extremities blue|
+  expected_output:
+    1:
+      gt0026|Total score: 6
+      gt0028|Apgar assessment: Moderately abnormal
+- id: score 7
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
+      gt0005|Muscle tone: 1|local::at0015|Reduced tone|
+      gt0006|Reflex irritability: 1|local::at0019|Reduced response|
+      gt0007|Skin colour: 1|local::at0023|Body pink; extremities blue|
+  expected_output:
+    1:
+      gt0026|Total score: 7
+      gt0028|Apgar assessment: Normal
+- id: score 8
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
+      gt0005|Muscle tone: 2|local::at0016|Normal tone|
+      gt0006|Reflex irritability: 1|local::at0019|Reduced response|
+      gt0007|Skin colour: 1|local::at0023|Body pink; extremities blue|
+  expected_output:
+    1:
+      gt0026|Total score: 8
+      gt0028|Apgar assessment: Normal
+- id: score 9
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
+      gt0005|Muscle tone: 2|local::at0016|Normal tone|
+      gt0006|Reflex irritability: 2|local::at0020|Normal response|
+      gt0007|Skin colour: 1|local::at0023|Body pink; extremities blue|
+  expected_output:
+    1:
+      gt0026|Total score: 9
+      gt0028|Apgar assessment: Normal
+- id: score 10
   input:
     1:
       gt0003|Respiratory effort: 2|local::at0012|Normal|
@@ -40,18 +108,49 @@ test_cases:
   expected_output:
     1:
       gt0026|Total score: 10
-      gt0028|Apgar assessment: 0|local::at0003|Normal|
-
-
-- id: case_ApgarScore=8
+      gt0028|Apgar assessment: Normal
+- id: Negative test 1
   input:
     1:
-      gt0003|Respiratory effort: 1|local::at0011|Weak or irregular|
-      gt0004|Heart Rate: 1|local::at0007|<100 beats per minute|
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
       gt0005|Muscle tone: 2|local::at0016|Normal tone|
+      gt0006|Reflex irritability: 2|local::at0020|Normal response|
+  expected_output:
+    1: {}
+- id: negative test 2
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
+      gt0005|Muscle tone: 2|local::at0016|Normal tone|
+      gt0007|Skin colour: 2|local::at0024|Completely pink|
+  expected_output:
+    1: {}
+- id: negative test 3
+  input:
+    1:
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0004|Heart Rate: 2|local::at0008|≥100 beats per minute|
       gt0006|Reflex irritability: 2|local::at0020|Normal response|
       gt0007|Skin colour: 2|local::at0024|Completely pink|
   expected_output:
+    1: {}
+- id: negative test 5
+  input:
     1:
-      gt0026|Total score: 8
-      gt0028|Apgar assessment: 0|local::at0003|Normal|
+      gt0003|Respiratory effort: 2|local::at0012|Normal|
+      gt0005|Muscle tone: 0|local::at0014|Limp or flaccid|
+      gt0006|Reflex irritability: 2|local::at0020|Normal response|
+      gt0007|Skin colour: 2|local::at0024|Completely pink|
+  expected_output:
+    1: {}
+- id: negative test 6
+  input:
+    1:
+      gt0004|Heart Rate: 1|local::at0007|<100 beats per minute|
+      gt0005|Muscle tone: 0|local::at0014|Limp or flaccid|
+      gt0006|Reflex irritability: 2|local::at0020|Normal response|
+      gt0007|Skin colour: 2|local::at0024|Completely pink|
+  expected_output:
+    1: {}
