--- a/gdl2/PEWS.v1.test.yml
+++ b/gdl2/PEWS.v1.test.yml
@@ -1,7 +1,7 @@
 guidelines:
   1: PEWS.v1
 test_cases:
-- id: case_1:Total score = 0 (Low risk)
+- id: Total score = 0 (Low risk)
   input:
     1:
       gt0004|Behaviour: 0|local::at0010|Playing/appropriate|
@@ -12,10 +12,9 @@ test_cases:
   expected_output:
     1:
       gt0014|Total score: 0
-      gt0023|Risk level: 0|local::at0004|Low risk|
-      gt0024|Recommendation: 0|local::at0007|Reassess as needed|
-
-- id: case_2:Total score = 3 (intermediate risk)
+      gt0023|Risk level: Low risk
+      gt0024|Recommendation: Reassess as needed
+- id: Total score = 3 (intermediate risk)
   input:
     1:
       gt0004|Behaviour: 1|local::at0011|Sleeping|
@@ -26,11 +25,9 @@ test_cases:
   expected_output:
     1:
       gt0014|Total score: 3
-      gt0023|Risk level: 1|local::at0005|Intermediate risk|
-      gt0024|Recommendation: 1|local::at0008|Alert charge nurse and staff MD|
-
-
-- id: case_3:Total score = 7 (high risk)
+      gt0023|Risk level: Intermediate risk
+      gt0024|Recommendation: Alert charge nurse and staff MD
+- id: Total score = 7 (high risk)
   input:
     1:
       gt0004|Behaviour: 1|local::at0011|Sleeping|
@@ -41,10 +38,9 @@ test_cases:
   expected_output:
     1:
       gt0014|Total score: 7
-      gt0023|Risk level: 2|local::at0006|High risk|
-      gt0024|Recommendation: 2|local::at0009|Initiate rapid response team|
-
-- id: case_4:Total score = 10 (high risk)
+      gt0023|Risk level: High risk
+      gt0024|Recommendation: Initiate rapid response team
+- id: Total score = 10 (high risk)
   input:
     1:
       gt0004|Behaviour: 2|local::at0012|Irritable|
@@ -55,10 +51,9 @@ test_cases:
   expected_output:
     1:
       gt0014|Total score: 10
-      gt0023|Risk level: 2|local::at0006|High risk|
-      gt0024|Recommendation: 2|local::at0009|Initiate rapid response team|
-
-- id: case_5:Total score = 13 (high risk)
+      gt0023|Risk level: High risk
+      gt0024|Recommendation: Initiate rapid response team
+- id: Total score = 13 (high risk)
   input:
     1:
       gt0004|Behaviour: 3|local::at0013|Lethargic/confused or reduced response to pain|
@@ -69,5 +64,5 @@ test_cases:
   expected_output:
     1:
       gt0014|Total score: 13
-      gt0023|Risk level: 2|local::at0006|High risk|
-      gt0024|Recommendation: 2|local::at0009|Initiate rapid response team|
+      gt0023|Risk level: High risk
+      gt0024|Recommendation: Initiate rapid response team
