--- a/gdl2/montreal_classification_ibd.v1.test.yml
+++ b/gdl2/montreal_classification_ibd.v1.test.yml
@@ -79,7 +79,7 @@ test_cases:
       gt0011|Location (L): local::at0039|(L2+L4)|
       gt0012|Behavior (B): local::at0023|B3p|
       gt0010|Age at diagnosis, years (A): local::at0011|A3|
-- id: A2(L3+L4)B1
+- id: Crohn's disease A2(L3+L4)B1
   input:
     1:
       gt0003|Type of IBD: local::at0016|Crohn's disease|
@@ -96,8 +96,8 @@ test_cases:
   input:
     1:
       gt0003|Type of IBD: local::at0017|Ulcerative colitis|
-      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0037|No symptoms of UC|
-      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0034|Ulcerative proctitis|
+      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0037|UC in clinical remission, no symptoms of UC|
+      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0034|Ulcerative proctitis, involvement limited to the rectum (i.e., proximal extent of inflammation is distal to the rectosigmoid junction) |
   expected_output:
     1:
       gt0015|Type of IBD: local::at0037|Ulcerative colitis|
@@ -107,8 +107,8 @@ test_cases:
   input:
     1:
       gt0003|Type of IBD: local::at0017|Ulcerative colitis|
-      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0038|Mild UC |
-      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0035|Distal ulcerative colitis or Left-sided UC |
+      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0038|Mild UC, ≤4 bloody stools daily, lack of fever, pulse <90 bpm, hemoglobin ≥10.5 g/dL (105 g/L), erythrocyte sedimentation rate <30 mm/hr |
+      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0035|Left sided UC (also known as distal UC), involvement limited to the portion of the colorectum distal to the splenic flexure|
   expected_output:
     1:
       gt0015|Type of IBD: local::at0037|Ulcerative colitis|
@@ -118,8 +118,8 @@ test_cases:
   input:
     1:
       gt0003|Type of IBD: local::at0017|Ulcerative colitis|
-      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0039|Moderate UC |
-      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0036|Pancolitis or Extensive UC|
+      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0039|Moderate UC , >4-5 stools daily but with minimal signs of systemic toxicity|
+      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0036|Extensive UC (also known as pancolitis), involvement extends proximal to the splenic flexure |
   expected_output:
     1:
       gt0015|Type of IBD: local::at0037|Ulcerative colitis|
@@ -129,8 +129,8 @@ test_cases:
   input:
     1:
       gt0003|Type of IBD: local::at0017|Ulcerative colitis|
-      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0040|Severe UC |
-      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0036|Pancolitis or Extensive UC|
+      'gt0008|If Ulcerative colitis choose: Severity (S)': local::at0040|Severe UC , ≥6 bloody stools daily, pulse ≥90 bpm, temperature ≥99.5°F (37.5°C), hemoglobin <10.5 g/dL (105 g/L), and erythrocyte sedimentation rate ≥30 mm/hr|
+      'gt0044|If Ulcerative colitis choose: Extent (E)': local::at0036|Extensive UC (also known as pancolitis), involvement extends proximal to the splenic flexure |
   expected_output:
     1:
       gt0015|Type of IBD: local::at0037|Ulcerative colitis|
